Реализация основного сервиса, исправить код для postman тестов